[MW] NDS-31: Exclude content property if document is yet to be uploaded